Second commit trying to link netlify

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ baseURL = "http://examplesite.com"
 languageCode = "en-us"
 summaryLength = "10"
 theme = "kross-hugo"
-title = "Kross"
+title = "Pablo Carrera Lorenzo"
 
 # css plugins
 [[params.plugins.css]]
@@ -56,11 +56,11 @@ logo = ""
 # theme color
 theme_color = "#41228e"
 # contact info
-phone = "+880 2544 658 256"
-email = "steve.fruits@email.com"
-address = "125/A, CA Commercial Area, California, USA"
+phone = "+34 686 300 310"
+email = "pabloc.mfa2021@london.edu"
+address = "20 Stourcliffe Close, London W1H 5AQ"
 # meta description
-author = "Johnathan Smith"
+author = "Pablo Carrera Lorenzo"
 description = "This is meta description"
 # google analytics
 google_analytics_id = "" # Your ID
@@ -94,16 +94,25 @@ expire_days = 2
 # social site
 [[params.social]]
 icon = "ti-facebook"
-URL = "#"
+URL = "https://www.facebook.com/pablo.carrera.lorenzo"
+label = "Facebook"
 
 [[params.social]]
 icon = "ti-instagram"
-URL = "#"
-
-[[params.social]]
-icon = "ti-dribbble"
-URL = "#"
+URL = "https://www.instagram.com/carrerapcl/"
+label = "Instagram"
 
 [[params.social]]
 icon = "ti-twitter-alt"
-URL = "#"
+URL = "https://twitter.com/carrerapcl"
+label = "Twitter"
+
+[[params.social]]
+icon = "ti-linkedin"
+URL = "https://www.linkedin.com/in/pablo-carrera/"
+label = "LinkedIn"
+
+[[params.social]]
+icon = "ti-github"
+URL = "https://github.com/carrerapcl"
+label = "GitHub"
