--- a/data/about.yml
+++ b/data/about.yml
@@ -1,6 +1,6 @@
 # work process
 work_process:
-  enable : true
+  enable : false
   title : "Work Process"
   item:
   - title : "Research and Plan"
@@ -18,17 +18,17 @@ work_process:
 
 # team
 team:
-  enable: true
+  enable: false
   title : "My Team"
   team_member:
     - title : "Jack Schenziwe"
       image : "images/team/member-1.png"
       designation : "Project Manager"
-      
+       
     - title : "Julias Carlie"
       image : "images/team/member-2.png"
       designation : "Web Developer"
-      
+       
     - title : "John Doe"
       image : "images/team/member-3.png"
       designation : "Designer"
@@ -37,5 +37,5 @@ team:
 # client logo slider
 clients_logo_slider:
   enable : true
-  title : "My Clients"
+  title : "I've worked with:"
   # clients logo comes from 'data/homepage.yml' file
