--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,7 @@ preloader = "images/preloader.gif" # use png, jpg, svg or gif format
 # contact
 [params.contact]
 enable = true
-form_action = "#" # contact form works with : https://formspree.io
+form_action = "pabloc.mfa2021@london.edu" # contact form works with : https://formspree.io
 
 # google map
 [params.map]
