--- a/themes/kross-hugo/netlify.toml
+++ b/themes/kross-hugo/netlify.toml
@@ -1,7 +1,24 @@
-[build]
-  publish = "exampleSite/public"
-  command = "cd exampleSite && hugo --gc --themesDir ../.."
+#[build]
+#  publish = "exampleSite/public"
+#  command = "cd exampleSite && hugo --gc --themesDir ../.."
   
+#[build.environment]
+#  HUGO_VERSION = "0.71.1"
+#  HUGO_THEME = "repo"
+  
+[build]
+  publish = "public"
+  command = "hugo"
+
 [build.environment]
-  HUGO_VERSION = "0.71.1"
-  HUGO_THEME = "repo"
+  HUGO_VERSION = "0.76.5"
+  HUGO_ENABLEGITINFO = "true"
+  
+[context.production.environment]
+  HUGO_ENV = "production"
+  
+[context.branch-deploy.environment]
+  HUGO_VERSION = "0.76.5"
+  
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.76.5"
