--- a/data/about.yml
+++ b/data/about.yml
@@ -36,6 +36,6 @@ team:
 
 # client logo slider
 clients_logo_slider:
-  enable : true
+  enable : false
   title : "I've worked with:"
   # clients logo comes from 'data/homepage.yml' file
